# examples

rust/hello/: canister_ids.json  dfx.json
rust/hello/src/hello/: Cargo.toml  hello.did  lib.rs
